--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,24 @@
 	</head>
 	<body>
 		<div class="wrapper">
-			<h1><a href="{% url 'articles:list' %}"><img src="{% static 'logo.png' %}"></a></h1>
+			<h1><a href="{% url 'home' %}"><img src="{% static 'logo.png' %}"></a></h1>
+			<nav>
+				<ul>
+				{% if user.is_authenticated %}
+						<li><a class="highlight" href="{% url 'articles:create' %}">Create New Article</a></li>
+						<li>
+							<form class="logout-link" action="{% url 'accounts:logout' %}" method="POST">
+								{% csrf_token %}
+								<button type='submit'>Logout</button>
+							</form>
+						</li>
+				{% else %}
+
+					<li><a href="{% url 'accounts:login' %}">Login</a></li>
+					<li><a href="{% url 'accounts:signup' %}">Signup</a></li>
+				{% endif %}
+				</ul>
+			</nav>
 			{% block content %}
 			{% endblock %}
 		</div>
